# VigilCut

./: .coderabbit.yaml  .env.example  .gitignore  Abrir-VigilCut.bat  Abrir-VigilCut.vbs  CHANGELOG.md  LICENSE  README.md  codecov.yml  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  job_control.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: analyze.rs  audio.rs  batch.rs  clipping.rs  color.rs  export.rs  factory.rs  media.rs  mod.rs  presets.rs  project.rs  subtitles.rs  system.rs  timeline.rs  vad.rs  visual.rs  visual_intel.rs  watch.rs
src-tauri/src/ffmpeg/: mod.rs  sidecar.rs
src-tauri/src/models/: analysis.rs  artifacts.rs  batch.rs  clipping.rs  edl.rs  event.rs  exception_mode.rs  media.rs  metrics.rs  mod.rs  policy_pack.rs  preset.rs  progress.rs  project.rs  segment.rs  story_contracts.rs  subtitle.rs  transcript.rs  visual.rs  visual_intel.rs
src-tauri/src/pipeline/: artifacts.rs  batch_worker.rs  engine.rs  export.rs  features.rs  mod.rs  policy.rs  safe_paths.rs  semantic.rs  silence.rs  time_map.rs  transcript_engine.rs
src-tauri/src/pipeline/clipping/: dedupe.rs  engine.rs  export_clips.rs  framing.rs  generate.rs  mod.rs  preselect.rs  score.rs  titles.rs  transcript.rs
src-tauri/src/pipeline/detectors/: breath.rs  filler.rs  mod.rs  silero.rs  structure.rs  whisper_cli.rs
src-tauri/src/pipeline/visual/: assignments.rs  compose.rs  concept_coverage.rs  concepts.rs  intel_flow_tests.rs  intelligent_match.rs  layout.rs  library.rs  library_dashboard.rs  library_requests.rs  match_rank.rs  matching_adapter.rs  mod.rs  needs.rs  qa.rs  render.rs  schema.rs
src-tauri/src/pipeline/visual/generation/: cost.rs  daily_feed.rs  mock.rs  mod.rs  omniroute.rs  provider.rs  supervision.rs  supervision_tests.rs  supervisor.rs  worker.rs
src-tauri/src/visual_library/: mod.rs
src-tauri/src/visual_library/application/: library_service.rs  mod.rs  sync_service.rs
src-tauri/src/visual_library/commands/: library_commands.rs  mod.rs  sync_commands.rs
src-tauri/src/visual_library/domain/: asset.rs  concept.rs  contracts.rs  generation.rs  license.rs  mod.rs  provenance.rs  qa.rs  usage.rs
src-tauri/src/visual_library/infrastructure/: mod.rs
src-tauri/src/visual_library/infrastructure/providers/: mod.rs  pollinations.rs
src-tauri/src/visual_library/infrastructure/qa/: mod.rs
src-tauri/src/visual_library/infrastructure/sqlite/: mod.rs
src-tauri/src/visual_library/infrastructure/storage/: mod.rs  (+1 more)
src-tauri/tests/: e2e_clipping.rs  e2e_factory.rs  smoke_clipping.rs  smoke_pipeline.rs  smoke_visual.rs  smoke_visual_intel.rs
src-tauri/tests/common/: mod.rs
(+107 files in other folders)
