[package]
name = "vigilcut"
version = "1.1.0"
description = "VigilCut Factory — local AI content post-production engine"
authors = ["VigilCut Contributors"]
license = "MIT"
repository = "https://github.com/Joereload2/VigilCut"
edition = "2021"
rust-version = "1.77"
default-run = "vigilcut"

[lib]
name = "vigilcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vigilcut"
path = "src/main.rs"

[[bin]]
name = "vigilcut-cli"
path = "src/bin/vigilcut_cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time"] }
which = "7"
regex = "1"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
walkdir = "2"
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
